2002-01-23  Wolfgang M&uuml;ller  <muellerw@linux.unige.ch>

	* GIFTServer/oneMinus.cc: 
	* GIFTServer/modifyDistanceMatrix.cc: using namespace std

	* GIFTServer/modifyDistanceMatrix.cc: include iostream

	* GIFTServer/Server.cc (main): return int
	change fstream::in+fstream::out to fstream::in|fstream::out
	
	
	* libGIFTAcInvertedFile/cc/CInvertedFileChunk.cc: 
	(writeBinary): 
	* libGIFTAcInvertedFile/cc/CIFListStart.cc: 
	read and write need typecast to char* when using g++ v3

2002-01-22  MUELLER Wolfgang  <Wolfgang.Mueller@cui.unige.ch>

	* GIFTServer/Server.cc (main): adding seeding by pid
	third parameter has to be "0" to block seeding

2002-01-20  Wolfgang M&uuml;ller  <muellerw@cui.unige.ch>

	* libMRML/cc/Makefile.am (libMRML-config.cc): 
	* libMRML/cc/libMRML-config.pre-cc (main): 
	make it work. replacing @ by % in the sed operation
	transforming pre-cc to cc and consequently in the 
	pre-cc source 

2002-01-12  Wolfgang M&uuml;ller  <muellerw@cui.unige.ch>

	* configure.in: $(CXX) instead of $(CC) in perl test
	compile

2002-01-11  MUELLER Wolfgang  <Wolfgang.Mueller@cui.unige.ch>

	* configure.in(AC_CHECK_FILE[$PERL...]): 
	added -ldl to non-perl branch as consequence of
	patch suggestion by 
	Pruet Boonma <pruet@eng.cmu.ac.th>

2002-01-10  MUELLER Wolfgang  <Wolfgang.Mueller@cui.unige.ch>

	* libGIFTAcInvertedFile/include/merge_sort_streams.h: 
	streampos troubles

	* libGIFTAcInvertedFile/cc/CDocumentFrequencyList.cc: 
	* libGIFTAcInvertedFile/cc/CDocumentFrequencyElement.cc: (char*) cast 
	in read/write from/to stream

	* libGIFTAcURL2FTS/cc/CAcURL2FTS.cc: Yay, gcc v3.0.3 found
	me an error mIDToFFN.find gave back an iterator mURLToFFN.

	* libMRML/cc/CXMLElement.cc: 
	* libMRML/cc/CAttributeList.cc: 
	* libMRML/cc/CXMLElementBuilder.cc: include iostream

	* libMRML/include/CQMultiple.h: 
	* libMRML/include/CAccessorImplementation.h: 
	ifdef HAS_HASH_MAP

	* libGIFTAcInvertedFile/cc/CBitSetCollection.cc: 